--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,6 @@ py4DGUI = "py4D_browser.runGUI:launch"
 [project.urls]
 "Homepage" = "https://github.com/py4dstem/py4D-browser"
 "Bug Tracker" = "https://github.com/py4dstem/py4D-browser/issues"
+
+[tool.pyright]
+venv = "py4dstem"
