--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   "h5py",
   "numpy >= 1.19",
   "matplotlib >= 3.2.2",
+  "platformdirs",
   "PyQt5 >= 5.10",
   "pyqtgraph >= 0.11",
   "sigfig",
